--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-//My porfolio 
+<!DOCTYPE html>
+ <html>
+ <head>
+<body>
+ <title>SoftwareEngineer</title>
+<h1>HelloMyNameisMiranda</h>
+<h2>IAmASoftwareEngieerLocatedInAtlantaGa</h>
+<h3>IAmAformerStayAtHomeMother,IAminterestedInCreatingWebsites,AlsoHelpingOtherCreate</3>
+<h4>PleaseFreeToLookAtMyWebsiteAndContactMeHere</h4>
+<link</>https://www.linkedin.com/in/miranda-brown-374841b8,https://github.com/Moneke30
+<p>
+ <ul>
+ <ol>
+ <img>
+ <a>
+ <h>
+     </ul>
+   </div>
+ </div>
+
+ </body>
+ </html>
